use twitter4j 2.5 snapshot version as its the only version that works with the change of the endpoint
Former-commit-id: 8c776bee976f85ea880cec62c1561c76c49eafe6

--- a/plugins/river/twitter/build.gradle
+++ b/plugins/river/twitter/build.gradle
@@ -30,13 +30,17 @@ configurations {
     }
 }
 
+repositories {
+    mavenRepo urls: 'http://twitter4j.org/maven2'
+}
+
 dependencies {
     compile project(':elasticsearch')
 
-    compile('org.twitter4j:twitter4j-core:2.2.4') { transitive = false }
-    compile('org.twitter4j:twitter4j-stream:2.2.4') { transitive = false }
-    compile('org.twitter4j:twitter4j-core:2.2.4') { transitive = false }
-    compile('org.twitter4j:twitter4j-stream:2.2.4') { transitive = false }
+    compile('org.twitter4j:twitter4j-core:2.2.5-SNAPSHOT') { transitive = false }
+    compile('org.twitter4j:twitter4j-stream:2.2.5-SNAPSHOT') { transitive = false }
+    compile('org.twitter4j:twitter4j-core:2.2.5-SNAPSHOT') { transitive = false }
+    compile('org.twitter4j:twitter4j-stream:2.2.5-SNAPSHOT') { transitive = false }
 }
 
 task explodedDist(dependsOn: [jar], description: 'Builds the plugin zip file') << {
