--- a/plugins/river/twitter/build.gradle
+++ b/plugins/river/twitter/build.gradle
@@ -39,8 +39,8 @@ dependencies {
 
     compile('org.twitter4j:twitter4j-core:2.2.5-SNAPSHOT') { transitive = false }
     compile('org.twitter4j:twitter4j-stream:2.2.5-SNAPSHOT') { transitive = false }
-    compile('org.twitter4j:twitter4j-core:2.2.5-SNAPSHOT') { transitive = false }
-    compile('org.twitter4j:twitter4j-stream:2.2.5-SNAPSHOT') { transitive = false }
+    distLib('org.twitter4j:twitter4j-core:2.2.5-SNAPSHOT') { transitive = false }
+    distLib('org.twitter4j:twitter4j-stream:2.2.5-SNAPSHOT') { transitive = false }
 }
 
 task explodedDist(dependsOn: [jar], description: 'Builds the plugin zip file') << {
