move to formal twitter4j 2.2.5
Former-commit-id: 6c275098ba801fe4d412e209e0939fde795ab25f

--- a/plugins/river/twitter/build.gradle
+++ b/plugins/river/twitter/build.gradle
@@ -30,17 +30,13 @@ configurations {
     }
 }
 
-repositories {
-    mavenRepo urls: 'http://twitter4j.org/maven2'
-}
-
 dependencies {
     compile project(':elasticsearch')
 
-    compile('org.twitter4j:twitter4j-core:2.2.5-SNAPSHOT') { transitive = false }
-    compile('org.twitter4j:twitter4j-stream:2.2.5-SNAPSHOT') { transitive = false }
-    distLib('org.twitter4j:twitter4j-core:2.2.5-SNAPSHOT') { transitive = false }
-    distLib('org.twitter4j:twitter4j-stream:2.2.5-SNAPSHOT') { transitive = false }
+    compile('org.twitter4j:twitter4j-core:2.2.5') { transitive = false }
+    compile('org.twitter4j:twitter4j-stream:2.2.5') { transitive = false }
+    distLib('org.twitter4j:twitter4j-core:2.2.5') { transitive = false }
+    distLib('org.twitter4j:twitter4j-stream:2.2.5') { transitive = false }
 }
 
 task explodedDist(dependsOn: [jar], description: 'Builds the plugin zip file') << {
