--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 sdf.setTimeZone(TimeZone.getTimeZone("UTC"));
 buildTimeStr = sdf.format(buildTime)
 
-versionNumber = '0.18.0-SNAPSHOT'
+versionNumber = '0.18.0'
 
 explodedDistDir = new File(distsDir, 'exploded')
 explodedDistLibDir = new File(explodedDistDir, 'lib')
@@ -189,14 +189,14 @@ task tar(type: Tar, dependsOn: ['explodedDist']) {
 
 
 task deb(dependsOn: ['explodedDist']) << {
-    ant.taskdef(name: "deb", classname: "org.vafer.jdeb.ant.DebAntTask", classpath: configurations.jdeb.asPath )
-    ant.copy(todir: "${distsDir}/debian") { 
+    ant.taskdef(name: "deb", classname: "org.vafer.jdeb.ant.DebAntTask", classpath: configurations.jdeb.asPath)
+    ant.copy(todir: "${distsDir}/debian") {
         fileset(dir: "pkg/debian/control")
-        filterset(begintoken: "[[", endtoken: "]]"){
-                filter(token: "version", value: "${version}")
+        filterset(begintoken: "[[", endtoken: "]]") {
+            filter(token: "version", value: "${version}")
         }
     }
-    ant.deb(destfile: "${distsDir}/${archivesBaseName}-${version}-1_all.deb", control: "${distsDir}/debian", verbose: "true"){
+    ant.deb(destfile: "${distsDir}/${archivesBaseName}-${version}-1_all.deb", control: "${distsDir}/debian", verbose: "true") {
         tarfileset(dir: explodedDistDir, prefix: "/usr/share/elasticsearch", includes: "*.txt, *.textile", username: "root", group: "root")
         tarfileset(dir: explodedDistBinDir, prefix: "/usr/share/elasticsearch/bin", excludes: "*.bat", filemode: "755", username: "root", group: "root")
         tarfileset(dir: explodedDistLibDir, prefix: "/usr/share/elasticsearch/lib", includes: "*.jar, sigar/*", username: "root", group: "root")
