Fix incorrect key in config sample
"transport.tcp.port" is used to configure netty, not "transport.port"


Former-commit-id: 38338e7fdbf9797d177f0548c58fd83481cba110

--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -200,7 +200,7 @@
 
 # Set a custom port for the node to node communication (9300 by default):
 #
-# transport.port: 9300
+# transport.tcp.port: 9300
 
 # Enable compression for all communication between nodes (disabled by default):
 #
