increase mem allocated for tests, add ability to run local tests
Former-commit-id: 2bcc14a6ea8dd6ecfe5121123cbfd1f037cfe5d0

--- a/pom.xml
+++ b/pom.xml
@@ -285,6 +285,10 @@
                     <includes>
                         <include>**/*Tests.java</include>
                     </includes>
+                    <argLine>-Xmx512m -Des.logger.prefix=</argLine>
+                    <systemPropertyVariables>
+                        <es.node.local>${test.local}</es.node.local>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
