upgrade to guava 10.0.1 and fix assembly
Former-commit-id: c1b86f5786a152caa9d3686599baf77809a2922a

--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,14 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>r09</version>
+            <version>10.0.1</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
