make sigar optional
Former-commit-id: 41a9dc1e6ddc75a253b81748c33e8eebc55a9b24

--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,7 @@
             <version>1.6.4</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/sigar/sigar-1.6.4.jar</systemPath>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
