--- a/pom.xml
+++ b/pom.xml
@@ -197,14 +197,6 @@
         </dependency>
 
         <dependency>
-            <groupId>jline</groupId>
-            <artifactId>jline</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
             <groupId>sigar</groupId>
             <artifactId>sigar</artifactId>
             <version>1.6.4</version>
@@ -493,7 +485,7 @@
                                 </data>
                                 <data>
                                     <src>${project.build.directory}/lib</src>
-                                    <includes>lucene*, log4j*, jline*, jna*</includes>
+                                    <includes>lucene*, log4j*, jna*</includes>
                                     <type>directory</type>
                                     <mapper>
                                         <type>perm</type>
