--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-analysis-icu</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
     <description>ICU Analysis for ElasticSearch</description>
     <inceptionYear>2009</inceptionYear>
@@ -31,7 +31,7 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>0.19.0-SNAPSHOT</elasticsearch.version>
+        <elasticsearch.version>0.19.0.RC1</elasticsearch.version>
     </properties>
 
     <repositories>
