--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-lang-javascript</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
     <description>JavaScript lang plugin for ElasticSearch</description>
     <inceptionYear>2009</inceptionYear>
@@ -30,7 +30,7 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>0.19.0-SNAPSHOT</elasticsearch.version>
+        <elasticsearch.version>0.19.0.RC1</elasticsearch.version>
     </properties>
 
     <repositories>
