move to use sigar jar from maven central, which means that when using in the IDEA or running tests, sigar will not be enabled (since native files are not present), interim fix until we have a better one
Former-commit-id: bf11c19e49f611e3f15535635e2053bee1b11630

--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,15 @@
         </dependency>
 
         <dependency>
+            <groupId>org.fusesource</groupId>
+            <artifactId>sigar</artifactId>
+            <version>1.6.4</version>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- We don't use this since the publish pom is then messed up -->
+        <!--
+        <dependency>
             <groupId>sigar</groupId>
             <artifactId>sigar</artifactId>
             <version>1.6.4</version>
@@ -190,6 +199,7 @@
             <systemPath>${basedir}/lib/sigar/sigar-1.6.4.jar</systemPath>
             <optional>true</optional>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.testng</groupId>
