We should indicate each plugin version. Assembly plugin 2.2-beta-5 (default) works but the latest release (2.2.1) won't as we don't set the assembly id
Former-commit-id: ee3c17ec8b18dbd3ebb5d0bf46d657ba109d4f21

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2-beta-5</version>
                 <configuration>
                     <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                     <descriptors>
