--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-mapper-attachments</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
     <packaging>jar</packaging>
     <description>Mapper Attachments Type for ElasticSearch</description>
     <inceptionYear>2009</inceptionYear>
@@ -35,21 +35,21 @@
     </properties>
 
     <repositories>
-     <repository>
-          <id>codehausSnapshots</id>
-          <name>Codehaus Snapshots</name>
-          <releases>
-            <enabled>true</enabled>
-            <updatePolicy>always</updatePolicy>
-            <checksumPolicy>warn</checksumPolicy>
-          </releases>
-          <snapshots>
-            <enabled>true</enabled>
-            <updatePolicy>always</updatePolicy>
-            <checksumPolicy>fail</checksumPolicy>
-          </snapshots>
-          <url>http://oss.sonatype.org/content/repositories/releases/</url>
-          <layout>default</layout>
+        <repository>
+            <id>codehausSnapshots</id>
+            <name>Codehaus Snapshots</name>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </snapshots>
+            <url>http://oss.sonatype.org/content/repositories/releases/</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 
