--- a/src/main/assemblies/plugin.xml
+++ b/src/main/assemblies/plugin.xml
@@ -19,8 +19,8 @@
             <useProjectArtifact>true</useProjectArtifact>
             <useTransitiveFiltering>true</useTransitiveFiltering>
             <includes>
-               <include>org.apache.lucene:lucene-analyzers-phonetic</include>
-               <include>commons-codec:commons-codec</include>
+                <include>org.apache.lucene:lucene-phonetic</include>
+                <include>commons-codec:commons-codec</include>
             </includes>
         </dependencySet>
     </dependencySets>
