Debian: Update deps to be on openjdk-7-jre-headless first, then 6, closes #1929.
Former-commit-id: 5a2ee614d1e2ea31de1eab242cf79a63b5b480cc

--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -2,7 +2,7 @@ Package: elasticsearch
 Version: [[version]]
 Architecture: all
 Maintainer: Nicolas Huray <nicolas.huray@gmail.com>
-Depends: openjdk-6-jre-headless | sun-java6-jre
+Depends: openjdk-7-jre-headless | openjdk-6-jre-headless
 Section: web
 Priority: optional
 Homepage: http://www.elasticsearch.org/
