Update requirements of the deb package
Virtual packages such as java*-runtime are provided by various
java/JRE implementations, which makes it more flexible to use.


Former-commit-id: b8acb9c0bb08cd6ea940ae0c2e771892160c6522

--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -2,7 +2,7 @@ Package: elasticsearch
 Version: [[version]]
 Architecture: all
 Maintainer: Nicolas Huray <nicolas.huray@gmail.com>
-Depends: openjdk-7-jre-headless | openjdk-6-jre-headless
+Depends: java7-runtime-headless | java6-runtime-headless | java7-runtime | java6-runtime
 Section: web
 Priority: optional
 Homepage: http://www.elasticsearch.org/
