cleanup the additional analysis components
Former-commit-id: 32a1503b94fb13282d6e372e3104bf20d2260fea

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
     </properties>
 
     <repositories>
+        <repository>
+            <id>sonatype</id>
+            <url>http://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
     </repositories>
 
     <dependencies>
