--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,14 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>0.19.0.RC3</elasticsearch.version>
+        <elasticsearch.version>0.19.0</elasticsearch.version>
     </properties>
 
     <repositories>
+        <repository>
+            <id>sonatype</id>
+            <url>http://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
     </repositories>
 
     <dependencies>
