add license and repo
Former-commit-id: 65043c06924cd5396eac7a8bd0b1a4b95de6e66e

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
 
     <repositories>
         <repository>
+            <id>sonatype</id>
+            <url>http://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+        <repository>
             <id>codehausSnapshots</id>
             <name>Codehaus Snapshots</name>
             <releases>
