lintian rule : extended-description-line-too-long in src/deb/control/control
	* reduced description lines to 80 chars max to comply with lintian


Former-commit-id: 17a28b0fe0eb8f8e6eac9d1f11a5f2c906f6c909

--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -30,7 +30,9 @@ Description: Open Source, Distributed, RESTful Search Engine
  * (Near) Real Time Search.
  * Built on top of Lucene
    - Each shard is a fully functional Lucene index
-   - All the power of Lucene easily exposed through simple configuration / plugins.
+   - All the power of Lucene easily exposed through simple 
+     configuration/plugins.
  * Per operation consistency
-   - Single document level operations are atomic, consistent, isolated and durable.
+   - Single document level operations are atomic, consistent, isolated and
+     durable.
  * Open Source under Apache 2 License.
