--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -2,7 +2,7 @@ Package: elasticsearch
 Version: [[version]]
 Architecture: all
 Maintainer: Nicolas Huray <nicolas.huray@gmail.com>
-Depends: java7-runtime-headless | java6-runtime-headless | java7-runtime | java6-runtime
+Depends: adduser, java7-runtime-headless | java6-runtime-headless | java7-runtime | java6-runtime
 Section: web
 Priority: optional
 Homepage: http://www.elasticsearch.org/
